--- a/style.css
+++ b/style.css
@@ -13,40 +13,19 @@ body {
 
 #showcase {
 	background-color: #eff;
-}
-
-#showcase .container {
 	font-size: 0; /* remove white space between inline-block */
-}
-
-#panel-1, #panel-6 {
-	background-color: #dff2ff;
-}
-
-#panel-2 {
-	background-color: #dff2ff;
-}
-
-#panel-3 {
-	background-color: #dff2ff;
-}
-
-#panel-4 {
-	background-color: #dff2ff;
-}
-
-#panel-5 {
-	background-color: #dff2ff;
+	padding-bottom: 40px;
 }
 
 .panel {
 	width: 320px;
 	height: 260px;
+	box-sizing: border-box;
+	border: 1px solid #bfe5ff;
+	background-color: #dff2ff;
 	display: inline-block;	/* floating */
 	vertical-align: middle; /* in a line */
 	position: relative; /* for overlay text */
-	border: 1px solid #bfe5ff;
-	box-sizing: border-box;
 }
 
 /* for vertical middle alignment */
@@ -66,12 +45,11 @@ body {
 }
 
 .panel:hover img {
-	/*filter: blur(4px); /* blur image on hover */
 	max-height: 75%;
 	vertical-align: bottom;
 }
 
-.popup {
+.panel div {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -80,96 +58,138 @@ body {
 	box-sizing: border-box;
 }
 
-.popup:before {
+.panel div:before {
 	content: " ";
 	position: absolute;
 	left: 50%;
 	top: 0;
 	width: 0;
 	height: 100%;
+	box-sizing: border-box;
 	border: 2px solid #9fd8ff;
 	border-left: none;
 	border-right: none;
 	transition: all 0.3s;
-	box-sizing: border-box;
 }
 
-.panel:hover .popup:before {
+.panel:hover div:before {
 	width: 100%;
 	left: 0;
 }
 
-.popup:after {
+.panel div:after {
 	content: " ";
 	position: absolute;
 	left: 0;
 	top: 50%;
 	width: 100%;
 	height: 0;
+	box-sizing: border-box;
 	border: 2px solid #9fd8ff;
 	border-top: none;
 	border-bottom: none;
 	transition: all 0.3s;
-	box-sizing: border-box;
 }
 
-.panel:hover .popup:after {
+.panel:hover div:after {
 	height: 100%;
 	top: 0;
 }
 
-.popup p {
+.panel div p {
 	color: #005f9f;
 	font-size: 16px;
 	visibility: hidden; /* visible on hover */
 }
 
-.panel:hover .popup p {
+.panel:hover div p {
 	visibility: visible;
 }
 
 #footer {
-	height: 80px;
-}
-
-#footer .container {
-	height: 100%;
-	position: relative;
+	height: 20px;
 }
 
 #footer p {
-	position:absolute;
-	margin:auto;
-	left: 0;
-	right: 0;
-	bottom: 5px;
 	color: #666;
 	font-size: 15px;
 }
 
 #header {
-	height: 40px;
-	border-bottom: 1px solid #666;
+	margin-top: 10px;
 }
 
-#header h1 {
+#header .container {
+	height: 90px;
+	position: relative;
+	border-bottom: 1px solid grey;
+}
+
+#header #logo {
+	position: absolute;
+	left: -6px;
+	bottom: -1px;
+	height: 100%;
+}
+
+#header #menu {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+}
+
+#menu div {
+	margin-left: 10px;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#menu div img {
+	height: 60px;
+}
+
+#menu div p {
+	font-size: 13px;
 	margin: 0;
-	padding: 0;
+	border-bottom: 4px solid #ccc;
+}
+
+#menu div:hover p {
+	border-bottom: 4px solid #666;
+}
+
+#menu a, #menu a:hover, #menu a:active, #menu a:visited {
+	color: #00a;
+}
+
+#main {
+	padding-top: 30px;
+	text-align: left; 
+}
+
+#main .container {
+	overflow: hidden;
+}
+
+#main h2 {
+	font-weight:lighter;
+	font-size:160%;
+}
+
+#main p {
+	line-height: 150%;
+}
+
+#about {
 	float: left;
+	width: 65%;
 }
 
-#header ul {
-	list-style: none;
-	margin: 15px;
-	padding: 0;
-	float: right;
+#contact {
+	float:right;
+	width:25%;
 }
 
-#header li {
-	float: left;
-	margin: 0 5px; 
-}
-
-#main p, #main ul, #main ol {
-	text-align: left;
+#contact .sub {
+	color:#999;
 }
