--- a/style.css
+++ b/style.css
@@ -136,33 +136,33 @@ body {
 	height: 100%;
 }
 
-#header #menu {
+#header #about-menu {
 	position: absolute;
 	right: 0;
 	bottom: 0;
 }
 
-#menu div {
+#about-menu div {
 	margin-left: 10px;
 	display: inline-block;
 	vertical-align: middle;
 }
 
-#menu div img {
+#about-menu div img {
 	height: 60px;
 }
 
-#menu div p {
-	font-size: 13px;
+#about-menu div p {
 	margin: 0;
+	font-size: 13px;	
 	border-bottom: 4px solid #ccc;
 }
 
-#menu div:hover p {
+#about-menu div:hover p {
 	border-bottom: 4px solid #666;
 }
 
-#menu a, #menu a:hover, #menu a:active, #menu a:visited {
+#about-menu a, #about-menu a:hover, #about-menu a:active, #about-menu a:visited {
 	color: #00a;
 }
 
@@ -196,4 +196,63 @@ body {
 
 #contact .sub {
 	color:#999;
+}
+
+#navi {
+	list-style: none;
+	position: absolute;
+	right: 0;
+	top: 0;
+	margin: 0;
+}
+
+#navi li {
+	float: left;
+	margin-left: 15px;
+	font-size: 12px;
+}
+
+#navi a, #navi a:active, #navi a:visited {
+	color: #666;
+	text-decoration: none;
+}
+
+#navi a:hover {
+	color: #003f9f;
+	text-decoration: underline;
+}
+
+#title {
+	position: absolute;
+	left: 200px;
+	bottom: 2px;
+	margin: 0;
+	font-size: 18px;
+}
+
+#menu {
+	list-style: none;
+	position: absolute;
+	right: 0;
+	bottom: 2px;
+	margin: 0;
+}
+
+#menu li {
+	float: left;
+	margin-left: 15px;
+	font-size: 16px;
+}
+
+#title a, #title a:active, #title a:visited, 
+#menu a, #menu a:active, #menu a:visited  {
+	color: #003f9f;
+	text-decoration: none;
+	border-bottom: 4px solid #eff;
+}
+
+#title a:hover, #menu a:hover  {
+	color: #003f9f;
+	text-decoration: none;
+	border-bottom: 4px solid #666;
 }
