--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
-	margin: 0;
-	background: #eff;
-	text-align: center; /* Necessary for IE 6,7,8 */
 	font-family: 'Times New Roman', Times, serif;
 	font-size: 16px;
+	text-align: center; /* page layout center */
+	background: #eff;
+	margin: 0;
 }
 
 .container {
-	max-width: 960px; /* content width */
-	margin: 0 auto;
+	max-width: 960px; /* page layout width */
+	margin: 0 auto; /* center */
 }
 
 #showcase {
